package ma.newdev.rh.entity;

public enum AssetStatus {
    DISPONIBLE,
    ASSIGNE,
    EN_MAINTENANCE,
    HORS_SERVICE
}
