@startuml NewDEV_RH_Class_M5_Assets
' =====================================================================
' Module 5 — Gestion des Actifs IT (feature de différenciation)
' 2 entités : Asset, AssetAssignment
'
' Pattern identique à Module 1 :
'   - Asset    = ressource maître (équivalent de Employee)
'   - Assignment = ligne d'historique (équivalent d'EmployeeHistory)
' Cela permet de réutiliser le savoir-faire des modules précédents.
' =====================================================================

title Module 5 — Gestion des Actifs IT

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam shadowing false

class Employee <<Entity>> #E8F5E9 {
  - id : Long
  - fullName : String
  - status : EmployeeStatus
}

class Asset <<Entity>> {
  - id : Long
  - name : String
  - type : AssetType
  - serialNumber : String <<unique>>
  - description : String
  - acquiredAt : LocalDate
  - status : AssetStatus
  - createdAt : LocalDateTime
  --
  + isAvailable() : boolean
  + canBeAssigned() : boolean
  + assignTo(employee : Employee, actor : User) : AssetAssignment
  + unassign() : void
  + retire() : void   ' status → HORS_SERVICE
}

class AssetAssignment <<Entity>> {
  - id : Long
  - assignedAt : LocalDateTime
  - unassignedAt : LocalDateTime
  - assignedBy : Long  ' user_id
  --
  + isActive() : boolean
  + close() : void   ' set unassignedAt = now()
}

enum AssetType {
  LAPTOP
  DESKTOP
  MONITOR
  PHONE
  TABLET
  ACCESSORY
  OTHER
}

enum AssetStatus {
  DISPONIBLE
  ASSIGNE
  EN_MAINTENANCE
  HORS_SERVICE
}

' Relations
Asset    "1" *-- "0..*" AssetAssignment : history (composition)
Employee "1" -- "0..*" AssetAssignment

Asset --> AssetType
Asset --> AssetStatus

note right of Asset
  **Contraintes métier :**
  1. serialNumber UNIQUE (DB level)
  2. Un actif ne peut être assigné qu'à
     UN seul employé à la fois
     → vérifié via : aucune AssetAssignment
       avec unassignedAt = null pour cet asset
  3. Un actif EN_MAINTENANCE ou HORS_SERVICE
     ne peut PAS être assigné
  4. Un actif ne peut PAS être assigné à
     un employé ARCHIVE
  5. Suppression physique INTERDITE si
     l'actif a un historique d'affectation
     → on passe simplement en HORS_SERVICE
end note

note bottom of AssetAssignment
  **Pattern : ligne active = unassignedAt NULL**
  - assignedAt   = quand l'actif est remis
  - unassignedAt = quand il est rendu (NULL = en cours)

  L'historique complet d'un actif se lit
  en triant les lignes par assignedAt DESC.

  Pour trouver l'affectation actuelle :
  SELECT * FROM asset_assignments
  WHERE asset_id = ? AND unassigned_at IS NULL
end note

note left of Employee
  Référence depuis M1 — voir
  02_class_m1_employees.puml
  pour la définition complète.
end note

@enduml
